<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="model"
            type="com.example.mobv_zadanie.ui.viewModels.ChatMessagesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_messages_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/message_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:reverseLayout="true" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/send_chat_message_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/message_text"
            app:layout_constraintTop_toTopOf="@+id/message_text" />

        <Button
            android:id="@+id/send_giphy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_gifs_chat_btn"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/message_text"
            app:layout_constraintTop_toBottomOf="@+id/send" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_messages_list"
            android:importantForAutofill="no"
            android:hint="@string/hint_chat_message"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>